--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="https://i.imgur.com/xaL5Gaa.jpg"
+            src="/img/logo.jpg"
             alt="Logo"
             style="width: 40px"
             class="rounded-pill"
@@ -106,7 +106,7 @@
 
         <div class="hidden contain1 container-fluid container">
           <div>
-            <img class="picBord" src="https://i.imgur.com/fMpXe91.jpg" alt="Laptop" />
+            <img class="picBord" src="/img/dellCode.jpg" alt="Laptop" />
           </div >
           <div class="divide">
             <h1>A little about me...</h1>
@@ -126,7 +126,7 @@
           <div class="divide">
             <h1>Traveler of sorts</h1>
             <div>
-              <img class="plane hidden" src="https://i.imgur.com/NA9Kic7.png" alt="plane">
+              <img class="plane hidden" src="/img/plane.png" alt="plane">
             </div>
             <p>
               I've had the great fortune to have been in various places, from
@@ -137,7 +137,7 @@
           <div>
             <img
               class="picBord"
-              src="https://i.imgur.com/ixFDtg6.jpg"
+              src="/img/merryChrist.jpg"
               alt="Christmas Picture"
             />
           </div>
@@ -147,7 +147,7 @@
           <div>
             <img
               class="picBord"
-              src="https://i.imgur.com/UoRu2DB.jpg"
+              src="/img/weldMarine.jpg"
               alt="Marine Welder"
             />
           </div>
