--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               goals that I have. I want to continue to grow day by day.
               <br />
               <br />
-              ちなみに日本語をできりますわけ...
+              ちなみに日本語をできますわけ...
             </p>
           </div>
         </div>
