--- a/index.html
+++ b/index.html
@@ -121,6 +121,26 @@
             </p>
           </div>
         </div>
+<!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
+        <div class="hidden contain1 container-fluid container">
+          <div >
+            <a href="https://exptracf.onrender.com/" target="_blank">
+              <img class="picBord" src="/img/transaction.png" alt="budget image" />
+            </a>
+          </div >
+          <div class="divide">
+            <h1>Budget Tracker</h1>
+            <p >
+              We actually use this application to keep track of our monthly budget. 
+              I want to make improvements to this application as I progress with my learning.
+              I want to make things that are helpful.
+              <br />
+              <br />
+              I also incorporated a weather feature just because...
+            </p>
+          </div>
+        </div>
+<!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
 
         <div class="hidden contain2 container-fluid container">
           <div class="divide">
@@ -142,6 +162,26 @@
             />
           </div>
         </div>
+
+        <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
+        <div class="hidden contain1 container-fluid container">
+          <div >
+            <a href="https://my-weather-app-5j6e.onrender.com/" target="_blank">
+              <img class="picBord" src="/img/weatherApp.png" alt="weather image" />
+            </a>
+          </div >
+          <div class="divide">
+            <h1>Weather App</h1>
+            <p >
+              This was one of the first apps I used to help me learn API's. 
+              Learned how the manipulate objects for our use, and asking the user for permissions.
+              <br />
+              <br />
+              
+            </p>
+          </div>
+        </div>
+<!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
 
         <div class="hidden contain3 container-fluid container">
           <div>
@@ -172,7 +212,7 @@
               Welcome, I would like to start by thanking you for viewing this
               site. I am eager to expand my knowledge of programming. I am very
               much looking forward to build new projects to reinforce and grow
-              my knowledge base. Languages such as HTML, CSS, JavaScript and
+              my knowledge base. Languages such as HTML, CSS, JavaScript, React and
               beyond. I can be reached at orlandohenry100@gmail.com.
             </p>
             <form class="form-example">
