--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         </div>
       </div>
     </nav>
+    <!-- ********************************MAIN*************************************** -->
     <main>
+
         <div class="firstMes">
           <h1>Hi, my name is <span>Orlando Henry</span></h1>
           <!-- <button  class="knowMore">know more</button> -->
@@ -104,7 +106,11 @@
 
         <div id="know" style="padding: 40px"></div>
 
-        <div class="hidden contain1 container-fluid container">
+        <div class="firstSec">
+        
+        </div>
+        <!-- container-fluid -->
+        <div class="hidden contain1 container-fluid container test1">
           <div>
             <img class="picBord" src="/img/dellCode.jpg" alt="Laptop" />
           </div >
@@ -122,7 +128,7 @@
           </div>
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
-        <div class="hidden contain1 container-fluid container">
+        <div class="hidden contain1 container-fluid container test1">
           <div >
             <a href="https://exptracf.onrender.com/" target="_blank">
               <img class="picBord" src="/img/transaction.png" alt="budget image" />
@@ -164,7 +170,7 @@
         </div>
 
         <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
-        <div class="hidden contain1 container-fluid container">
+        <div class="hidden contain1 container-fluid container test2">
           <div >
             <a href="https://my-weather-app-5j6e.onrender.com/" target="_blank">
               <img class="picBord" src="/img/weatherApp.png" alt="weather image" />
@@ -183,7 +189,7 @@
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
 
-        <div class="hidden contain3 container-fluid container">
+        <div class="hidden contain3 container-fluid container test2">
           <div>
             <img
               class="picBord"
