--- a/index.html
+++ b/index.html
@@ -80,18 +80,9 @@
               </div>
             </li>
           </ul>
-          <form class="form-example">
-            <label for="email" class="text"
-              >Feel free to input an email address to be contacted:
-            </label>
-            <input
-              placeholder="Enter your email"
-              type="email"
-              name="email"
-              id="email"
-              required
-            />
-          </form>
+          <div class="contact">
+            <button><a href="https://hcontactform.onrender.com/">Contact Me</a></button>
+          </div>
         </div>
       </div>
     </nav>
@@ -221,18 +212,9 @@
               my knowledge base. Languages such as HTML, CSS, JavaScript, React and
               beyond. I can be reached at orlandohenry100@gmail.com.
             </p>
-            <form class="form-example">
-              <label for="email"
-                >Feel free to input an email address to be contacted:
-              </label>
-              <input
-                placeholder="Enter your email"
-                type="email"
-                name="email"
-                id="email"
-                required
-              />
-            </form>
+            <div class="contact">
+              <button><a href="https://hcontactform.onrender.com/">Contact Me</a></button>
+            </div>
           </div>
 
           <div class="col-xs-6 col-md-3">
