--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </li>
           </ul>
           <div class="contact">
-            <button><a href="https://hcontactform.onrender.com/">Contact Me</a></button>
+            <button><a href="https://hcontactform.onrender.com/" target="_blank">Contact Me</a></button>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
               beyond. I can be reached at orlandohenry100@gmail.com.
             </p>
             <div class="contact">
-              <button><a href="https://hcontactform.onrender.com/">Contact Me</a></button>
+              <button><a href="https://hcontactform.onrender.com/" target="_blank">Contact Me</a></button>
             </div>
           </div>
 
@@ -244,15 +244,15 @@
             <h6>Quick Links</h6>
             <ul class="footer-links">
               <li>
-                <a href="https://www.facebook.com/orlando.henry1/">Facebook</a>
+                <a href="https://www.facebook.com/orlando.henry1/" target="_blank">Facebook</a>
               </li>
               <li>
-                <a href="https://www.instagram.com/ohenrico21/">Instagram</a>
+                <a href="https://www.instagram.com/ohenrico21/" target="_blank">Instagram</a>
               </li>
               <li>
                 <a
                   href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw"
-                  >youtube</a
+                   target="_blank">youtube</a
                 >
               </li>
             </ul>
