--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
             <li class="nav-item">
               <a
                 class="nav-link vertRule"
-                href="https://www.facebook.com/orlando.henry1/"
+                href="https://www.facebook.com/orlando.henry1/" target="_blank"
                 >Facebook</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link vertRule"
-                href="https://www.instagram.com/ohenrico21/"
+                href="https://www.instagram.com/ohenrico21/" target="_blank"
                 >Instagram</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link vertRule"
-                href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw"
+                href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw" target="_blank"
                 >YouTube</a
               >
             </li>
@@ -221,19 +221,19 @@
             <h6>Languages</h6>
             <ul class="footer-links">
               <li>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank"
                   >CSS</a
                 >
               </li>
               <li>
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks"
+                  href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks" target="_blank"
                   >HTML</a
                 >
               </li>
               <li>
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"
                   >JavaScript</a
                 >
               </li>
