--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    />
+    /> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="port.css" />
-    <!-- <script src="port.js"></script> -->
     <title>Portfolio</title>
   </head>
   <body>
@@ -35,32 +35,32 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon dropdown-toggle"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item dropdown">
               <a
                 class="nav-link vertRule"
                 href="https://www.facebook.com/orlando.henry1/" target="_blank"
                 >Facebook</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item dropdown">
               <a
                 class="nav-link vertRule"
                 href="https://www.instagram.com/ohenrico21/" target="_blank"
                 >Instagram</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item dropdown">
               <a
                 class="nav-link vertRule"
                 href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw" target="_blank"
                 >YouTube</a
               >
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -101,7 +101,7 @@
         
         </div>
         <!-- container-fluid -->
-        <div class="hidden contain1 container-fluid container test1">
+        <div class="phone hidden contain1 container-fluid container test1">
           <div>
             <img class="picBord" src="/img/dellCode.jpg" alt="Laptop" />
           </div >
@@ -119,7 +119,7 @@
           </div>
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
-        <div class="hidden contain1 container-fluid container test1">
+        <div class="phone hidden contain1 container-fluid container test1">
           <div >
             <a href="https://exptracf.onrender.com/" target="_blank">
               <img class="picBord" src="/img/transaction.png" alt="budget image" />
@@ -139,7 +139,7 @@
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
 
-        <div class="hidden contain2 container-fluid container">
+        <div class="phone hidden contain2 container-fluid container">
           <div class="divide">
             <h1>Traveler of sorts</h1>
             <div>
@@ -161,7 +161,7 @@
         </div>
 
         <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
-        <div class="hidden contain1 container-fluid container test2">
+        <div class="phone hidden contain1 container-fluid container test2">
           <div >
             <a href="https://my-weather-app-5j6e.onrender.com/" target="_blank">
               <img class="picBord" src="/img/weatherApp.png" alt="weather image" />
@@ -180,7 +180,7 @@
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
 
-        <div class="hidden contain3 container-fluid container test2">
+        <div class="phone hidden contain3 container-fluid container test2">
           <div>
             <img
               class="picBord"
