--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
         </div>
         </div>
 <!-- qwertyuiosdfghjklsdfghjklxcvbnm,xcvbnm, -->
+<!-- container-fluid -->
+<!-- container -->
+<!-- contain2 -->
 
         <div class="phone hidden contain2 container-fluid container">
           <div class="divide">
