--- a/index.html
+++ b/index.html
@@ -88,12 +88,15 @@
     </nav>
     <!-- ********************************MAIN*************************************** -->
     <main>
+      <div class="firstP">
 
         <div class="firstMes">
           <h1>Hi, my name is <span>Orlando Henry</span></h1>
           <!-- <button  class="knowMore">know more</button> -->
           <a class="knowMore" href="#know">KnowMore</a>
         </div>
+      </div>
+      
 
         <div id="know" style="padding: 40px"></div>
 
