--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
     </nav>
     <!-- ********************************MAIN*************************************** -->
     <main>
+      <div class="makeCenter">
         <div class="firstMes">
           <h1>Hi, my name is <span>Orlando Henry</span></h1>
           <!-- <button  class="knowMore">know more</button> -->
-          <a class="knowMore" href="#know">KnowMore</a>
+          <a class="knowMore" href="#know">Know More</a>
         </div>
+      </div>
+
       
 
         <div id="know" style="padding: 40px"></div>
