--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 Other Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com">Weather App</a>
-                <a class="dropdown-item" href="https://yport.onrender.com/">Test Portfolio</a>
+                <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com" target="_blank">Weather App</a>
+                <a class="dropdown-item" href="https://yport.onrender.com/" target="_blank">Test Portfolio</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Pending</a>
               </div>
