--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             class="rounded-pill"
           />
         </a>
-        <a class="navbar-brand pill" href="#">Portfolio</a>
+        <a class="navbar-brand pill" href="https://portfolio-t3zu.onrender.com/#know">Portfolio</a>
         <button
           class="navbar-toggler"
           type="button"
