--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://portfolio-t3zu.onrender.com/#know">
           <img
             src="/img/logo.jpg"
             alt="Logo"
