--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com" target="_blank">Weather App</a>
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://yport.onrender.com/" target="_blank">Test Portfolio</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://hcontactform.onrender.com" target="_blank">Contact Form</a>
