--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               </li>
               <li>
                 <a href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw"
-                  target="_blank">youtube</a>
+                  target="_blank">YouTube</a>
               </li>
             </ul>
           </div>
