--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img
             src="/img/logo.jpg"
             alt="Logo"
-            style="width: 40px"
+            style="width: 45px"
             class="rounded-pill"
           />
         </a>
@@ -188,13 +188,13 @@
       </div>
     </main>
 
-    <footer class="site-footer">
+    <footer class="site-footer bg-dark">
       <hr />
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">
+            <h6 class="textColor">About</h6>
+            <p class="text-justify textColor">
               Welcome, I would like to start by thanking you for viewing this
               site. I am eager to expand my knowledge of programming. I am very
               much looking forward to build new projects to reinforce and grow
@@ -207,10 +207,10 @@
           </div>
     
           <div class="col-xs-6 col-md-3">
-            <h6>Languages</h6>
-            <ul class="footer-links">
+            <h6 class="textColor">Languages</h6>
+            <ul class="footer-links textDec">
               <li>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a>
+                <a class="textDec" href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a>
               </li>
               <li>
                 <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks"
@@ -223,8 +223,8 @@
           </div>
     
           <div class="col-xs-6 col-md-3">
-            <h6>Quick Links</h6>
-            <ul class="footer-links">
+            <h6 class="textColor">Quick Links</h6>
+            <ul class="footer-links textDec">
               <li>
                 <a href="https://www.facebook.com/orlando.henry1/" target="_blank">Facebook</a>
               </li>
@@ -239,11 +239,12 @@
           </div>
         </div>
       </div>
-      <hr />
+      <!-- <div class="space"></div> -->
+      <hr/>
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">
+            <p class="copyright-text textColor">
               Copyright &copy; 2023 All Rights Reserved by
               <a href="#">Portfolio</a>.
             </p>
