--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text textColor">
+            <p class="copyright-text textColor textDec">
               Copyright &copy; 2023 All Rights Reserved by
               <a href="#">Portfolio</a>.
             </p>
