--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
             </div>
           </div>
     
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-6 col-md-3 makeCenter">
             <h6 class="textColor">Languages</h6>
-            <ul class="footer-links textDec">
+            <ul class="footer-links textDec makeCenter">
               <li>
                 <a class="textDec" href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS</a>
               </li>
@@ -222,9 +222,9 @@
             </ul>
           </div>
     
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-6 col-md-3 makeCenter">
             <h6 class="textColor">Quick Links</h6>
-            <ul class="footer-links textDec">
+            <ul class="footer-links textDec makeCenter">
               <li>
                 <a href="https://www.facebook.com/orlando.henry1/" target="_blank">Facebook</a>
               </li>
