update web links

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link vertRule"
+                href="https://github.com/qwertyNippon" target="_blank"
+                >GitHub</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link vertRule"
                 href="https://www.facebook.com/orlando.henry1/" target="_blank"
                 >Facebook</a
               >
