--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                 Other Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://yurikaclasses.onrender.com/" target="_blank">Weather App</a>
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com" target="_blank">Weather App</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://yport.onrender.com/" target="_blank">Test Portfolio</a>
