--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Other Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="https://yurikaclasses.onrender.com/" target="_blank">Weather App</a>
+                <a class="dropdown-item" href="https://yurikaclasses.onrender.com/" target="_blank">Japanese Lessons</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com" target="_blank">Weather App</a>
                 <div class="dropdown-divider"></div>
