--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
                 Other Projects
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="https://yurikaclasses.onrender.com/" target="_blank">Japanese Lessons</a>
-                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://my-weather-app-5j6e.onrender.com" target="_blank">Weather App</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="https://yport.onrender.com/" target="_blank">Test Portfolio</a>
@@ -128,18 +126,16 @@
       <div class="phone hidden contain1 container-fluid container test1">
         <div class="divide">
           <div>
-            <a href="https://exptracf.onrender.com/" target="_blank">
-              <img class="picBord" src="/img/transaction.png" alt="budget image" />
+            <a href="https://yurikaclasses.onrender.com/" target="_blank">
+              <img class="picBord" src="/img/YuriClasses.png" alt="Yuri Classes" />
             </a>
           </div>
-          <h1>Budget Tracker</h1>
+          <h1>Japanese Lessons</h1>
           <p>
-            We actually use this application to keep track of our monthly budget.
-            I want to make improvements to this application as I progress with my learning.
-            I want to make things that are helpful.
-            <br />
-            <br />
-            I also incorporated a weather feature just because...
+            I'm happy to say that I've made a website that connects my wife with students. She is teaching Japanese through
+            various platforms. Instead of going through those platforms that takes a percentage, she can communicate directly with
+            the students, keeping more of the income meanwhile what the students pay stays the same. I intend to build an improved
+            version in the future.
           </p>
         </div>
       </div>
