--- a/index.html
+++ b/index.html
@@ -40,32 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
+              &nbsp;
               <a
-                class="nav-link vertRule"
-                href="https://github.com/qwertyNippon" target="_blank"
-                >GitHub</a
-              >
+              href="https://github.com/qwertyNippon" target="_blank"
+              class="nav-link vertRule fa-brands fa-github"></a>
+              &nbsp;&nbsp;
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link vertRule"
-                href="https://www.facebook.com/orlando.henry1/" target="_blank"
-                >Facebook</a
-              >
+              href="https://www.facebook.com/orlando.henry1/" target="_blank"
+              class="nav-link vertRule fa-brands fa-facebook"></a>
+              &nbsp;&nbsp;              
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link vertRule"
-                href="https://www.instagram.com/ohenrico21/" target="_blank"
-                >Instagram</a
-              >
+              href="https://www.instagram.com/ohenrico21/" target="_blank"
+              class="nav-link vertRule fa-brands fa-instagram"></a>
+              &nbsp;&nbsp;
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link vertRule"
-                href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw" target="_blank"
-                >YouTube</a
-              >
+              href="https://www.youtube.com/channel/UCdjmXLJxLw_4WEhA8bxMNwg?app=desktop&fbclid=PAAabqsVul-6BV37aUpXAmFZIuoQZZlZKqfMeeFer7kvCU8CbXJucnHtdDzGw" target="_blank"
+              class="nav-link vertRule fa-brands fa-youtube"></a>
+              &nbsp;&nbsp;
             </li>
             <li class="nav-item dropdown dropdown">
               <a
@@ -262,5 +259,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
+
+<script src="https://kit.fontawesome.com/a07ea85c82.js" crossorigin="anonymous"></script>
+
+
+</body>
 </html>
